[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "nonebot-adapter-console @ git+https://github.com/nonebot/adapter-console.git",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hemengyang", email = "hmy0119@gmail.com"},
]
dependencies = [
    "nonebot-adapter-console>=0.3.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}
