[tool.poetry]
name = "pdm-test"
version = "0.1.0"
description = ""
authors = ["hemengyang <hmy0119@gmail.com>"]
readme = "README.md"
packages = [{include = "pdm_test"}]

[tool.poetry.dependencies]
python = "^3.11"
nonebot-adapter-console = {git = "https://github.com/nonebot/adapter-console.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
